# draft-killer

./: .docs-organized  .gitignore  .setup-complete  Makefile  QUICKSTART.md  README.md  docker-compose.yml  env.example  setup.sh  start-dev.sh  todo.txt
backend/: .env.example  alembic.ini  pyproject.toml  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 2025_10_01_1852-5c7a58fe870b_initial_schema.py  2025_10_01_1911-1c14c7fd0237_add_usage_tracking_and_user_active_flag.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  admin.py  auth.py  chat.py  health.py
backend/app/core/: __init__.py  config.py  database.py  security.py  usage.py  weave_config.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/services/: odds_service.py  query_extraction_service.py  usage_service.py
backend/app/services/agent_service/: README.md  __init__.py  service.py  tools.py
backend/app/services/llm_service/: README.md  __init__.py  client.py  model.py  prompts.py  provider_config.py  service.py
backend/app/services/llm_service/prompts/: system_prompt.txt  user_prompt_template.txt
backend/app/services/odds_api/: README.md  __init__.py  client.py  examples.py  helpers.py  schemas.py  service.py
backend/tests/: README.md  __init__.py  conftest.py  test_agent_service.py  test_agent_service_integration.py  test_auth.py  test_chat.py  test_database.py  test_health.py  test_inference.py  test_odds_integration.py  test_query_extraction.py  test_weave_init.py
docs/: API_TESTING_README.md  AUTOMATION_README.md  DATABASE_VIEWER.md  DEVELOPMENT_NOTES.md  IMPLEMENTATION_OUTLINE.md  IMPLEMENTATION_STATUS.md  LLM_QUERY_EXTRACTION_DESIGN.md  ORGANIZATION.md  QUICKSTART.md  README.md  SETUP_AUTOMATION.md  SETUP_GUIDE.md  SETUP_VISUAL_GUIDE.md  SPORTSBOOK_API_RESEARCH.md  SPORTSBOOK_API_SUMMARY.md  SPORTSBOOK_RESEARCH_COMPLETE.md
frontend/: .eslintrc.json  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/admin/database/: database.module.css  page.tsx
frontend/src/app/admin/usage/: page.tsx  usage.module.css
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/Auth/: AuthForm.module.css  LoginForm.tsx  RegisterForm.tsx
frontend/src/components/Chat/: ChatInterface.module.css  ChatInterface.tsx  Message.module.css  Message.tsx  MessageInput.module.css  MessageInput.tsx  MessageList.module.css  MessageList.tsx  SportSelector.module.css  SportSelector.tsx  TypewriterText.module.css  TypewriterText.tsx
frontend/src/hooks/: useAuth.tsx  useChat.ts  useTypewriter.ts
frontend/src/styles/: globals.css  theme.ts
frontend/src/types/: index.ts
